--- a/roles/filetree_create/templates/gitlab-ci.yml.j2
+++ b/roles/filetree_create/templates/gitlab-ci.yml.j2
@@ -1,38 +1,69 @@
 ---
 {%- raw %}
 stages:
-#  - lint
+  - lint
+  - prepare
   - release
-#yamllint:
-#  stage: lint
-#  image: quay.io/automationiberia/aap/ee-casc:latest
-#  tags:
-#    - casc
-#    - controller-group
-#  rules:
-#    - if: '$CI_PIPELINE_SOURCE == "merge_request_event"'
-#    - if: '$CI_COMMIT_BRANCH && $CI_OPEN_MERGE_REQUESTS'
-#      when: never
-#    - if: '$CI_COMMIT_BRANCH'
-#  script:
-#    - yamllint -c ./.yamllint.yml .
-release_job:
-  stage: release
-  image: registry.gitlab.com/gitlab-org/release-cli:latest
+
+yamllint:
+  stage: lint
+  image: quay.io/automationiberia/aap/ee-casc:latest
+  tags:
+    - casc
+    - controller-group
+  rules:
+    - if: '$CI_PIPELINE_SOURCE == "merge_request_event"'
+    - if: '$CI_COMMIT_BRANCH && $CI_OPEN_MERGE_REQUESTS'
+      when: never
+    - if: '$CI_COMMIT_BRANCH'
+  script:
+    - yamllint -c ./.yamllint.yml .
+
+generate_tag:
+  stage: prepare
+  image: registry.gitlab.com/gitlab-org/release-cli
   tags:
     - casc
     - controller-group
   rules:
     - if: $CI_COMMIT_MESSAGE =~ /First Commit/
-      when: never                                  # Do not run this job when a commit message
+      when: never
     - if: $CI_COMMIT_TAG
-      when: never                                  # Do not run this job when a tag is created manually
-    - if: $CI_COMMIT_BRANCH == $CI_DEFAULT_BRANCH  # Run this job when commits are pushed or merged to the default branch
+      when: never
+    - if: $CI_COMMIT_BRANCH == $CI_DEFAULT_BRANCH
+      exists:
+        - VERSION
+      changes:
+        - VERSION
   script:
-    - echo "running release_job for $TAG"
-  release:                                         # See https://docs.gitlab.com/ee/ci/yaml/#release for available properties
-    tag_name: 'v0.$CI_PIPELINE_IID'                # The version is incremented per pipeline.
-    description: 'v0.$CI_PIPELINE_IID'
-    ref: '$CI_COMMIT_SHA'                          # The tag is created from the pipeline SHA.
+    - echo "TAG=$(cat VERSION)" > tag.env
+  artifacts:
+    reports:
+      dotenv: tag.env
+
+auto-release-master:
+  image: registry.gitlab.com/gitlab-org/release-cli
+  tags:
+    - casc
+    - controller-group
+  needs:
+    - job: generate_tag
+      artifacts: true
+  stage: release
+  rules:
+    - if: $CI_COMMIT_TAG
+      when: never
+    - if: $CI_COMMIT_BRANCH == $CI_DEFAULT_BRANCH
+      exists:
+        - VERSION
+      changes:
+        - VERSION
+  script:
+    - echo "Release $TAG"
+  release:
+    name: "Release $TAG"
+    description: "Created using the release-cli $EXTRA_DESCRIPTION"
+    tag_name: v$TAG
+    ref: $CI_COMMIT_SHA
 {% endraw %}
 ...
