Fixed org var undefined

--- a/roles/filetree_create/templates/README.md.j2
+++ b/roles/filetree_create/templates/README.md.j2
@@ -107,11 +107,11 @@ Before using CasC as a GitOps approach, it is needed to launch an initialization
 
 10. Configure the webhooks for both environments: DEV and PRO.
 
-   * Launch de JT {{ orgs }} JT_Gitlab_Webhook_Creation in {{ controller_dev }}
+   * Launch de JT {{ gitlab_project }} JT_Gitlab_Webhook_Creation in {{ controller_dev }}
 
-   * Launch de JT {{ orgs }} JT_Gitlab_Webhook_Creation in {{ controller_pro }}
+   * Launch de JT {{ gitlab_project }} JT_Gitlab_Webhook_Creation in {{ controller_pro }}
 
-   Webhooks should be created in the {{ orgs }} gitlab project. Check them.
+   Webhooks should be created in the {{ gitlab_project }} gitlab project. Check them.
 
 
 ### GitOps flow
