Remove character README.md

--- a/roles/filetree_create/templates/README.md.j2
+++ b/roles/filetree_create/templates/README.md.j2
@@ -43,7 +43,7 @@ Before using CasC as a GitOps approach, it is needed to launch an initialization
    GitLab API Token: Generate a Token for your user:
      1. Go to gitlab.com web and login with your user.
      2. Right top, click profile icon and "Edit Profile"
-     3. Click Access Tokens\
+     3. Click Access Tokens
      4. Select next day for Expiration Day and CasC-testathon as Token name.
      5. Select scope Api
      6. Save generated token.
