--- a/roles/filetree_create/templates/README.md.j2
+++ b/roles/filetree_create/templates/README.md.j2
@@ -135,6 +135,7 @@ Before using CasC as a GitOps approach, it is needed to launch an initialization
 
    ```
    git checkout dev
+   git pull
    git checkout -b add_info_job_template
    ```
 
