add first version for github_setup

--- a/roles/filetree_create/templates/controller_credentials.j2
+++ b/roles/filetree_create/templates/controller_credentials.j2
@@ -48,8 +48,8 @@ controller_credentials:
     inputs:
       vault_password: "ToDo"
 
-  - name: "{{ orgs }} {{ env }} Gitlab Credential"
-    description: "{{ orgs }} {{ env }} Gitlab Credential"
+  - name: "{{ orgs }} {{ env }} Git Credential"
+    description: "{{ orgs }} {{ env }} Git Credential"
     credential_type: "Source Control"
     organization: "{{ orgs }}"
     inputs:
