--- a/roles/filetree_create/templates/github_action_webhook.yml.j2
+++ b/roles/filetree_create/templates/github_action_webhook.yml.j2
@@ -18,13 +18,14 @@ jobs:
 
       - name: Get changed files
         id: changed-files
-        uses: tj-actions/changed-files@v35
+        uses: tj-actions/changed-files@v35.2.0
         with:
-          separator: '", "'
+          json_raw_format: true
+          json: true
 
       - uses: distributhor/workflow-webhook@v2
         env:
           webhook_type: 'json-extended'
-          webhook_url: ${{ secrets.WEBHOOK_URL_{{ __branch | upper }} }}
-          webhook_secret: ${{ secrets.WEBHOOK_SECRET_{{ __branch | upper }} }}
-          data: '{ "modified_files": ["${{ (steps.changed-files.outputs.all_changed_files) }}"] }'
+          webhook_url: ${{ secrets.WEBHOOK_URL_DEV }}
+          webhook_secret: ${{ secrets.WEBHOOK_SECRET_DEV }}
+          data: '{ "modified_files": ${{ (steps.changed-files.outputs.all_changed_files) }} }'
