redhat_cop namespace to infra

--- a/roles/filetree_create/templates/README.md.j2
+++ b/roles/filetree_create/templates/README.md.j2
@@ -16,7 +16,7 @@ CasC (Configuration as Code)  means the posibility of define every object of Ans
     - name: ansible.utils
     - name: ansible.posix
     - name: community.general
-    - name: redhat_cop.controller_configuration
+    - name: infra.controller_configuration
     - name: automationiberia.casc_setup
 
 Before using CasC as a GitOps approach, it is needed to launch an initialization from CLI which it is called Day-Zero.
