--- a/roles/filetree_create/templates/casc_ctrl_cd_webhook_trigger.yml.j2
+++ b/roles/filetree_create/templates/casc_ctrl_cd_webhook_trigger.yml.j2
@@ -28,7 +28,7 @@
 
     - name: Configure Controller Job Launch | Launch launch_jobs Drop Diff (Delete)
       include_role:
-        name: redhat_cop.controller_configuration.job_launch
+        name: infra.controller_configuration.job_launch
       vars:
         controller_launch_jobs:
           - name: "{{ __drop_diff_org_tags_item.key }} JT_CasC_Ctrl_Drop_Diff"
@@ -49,7 +49,7 @@
 
     - name: Configure Controller Job Launch | Launch launch_jobs creation
       include_role:
-        name: redhat_cop.controller_configuration.job_launch
+        name: infra.controller_configuration.job_launch
       vars:
         controller_launch_jobs:
           - name: "{{ __config_controller_org_tags_item.key }} JT_CasC_Ctrl_Config"
