--- a/roles/filetree_create/templates/casc_ctrl_config.yml.j2
+++ b/roles/filetree_create/templates/casc_ctrl_config.yml.j2
@@ -33,14 +33,14 @@
       tags:
         - always
   roles:
-    - {role: redhat_cop.controller_configuration.filetree_read, assign_galaxy_credentials_to_org: false}
-    - {role: redhat_cop.controller_configuration.dispatch, assign_galaxy_credentials_to_org: false}
+    - {role: infra.controller_configuration.filetree_read, assign_galaxy_credentials_to_org: false}
+    - {role: infra.controller_configuration.dispatch, assign_galaxy_credentials_to_org: false}
 
   post_tasks:
     - block:
         - name: Include Tasks to add Galaxy credentials to Organizations
           ansible.builtin.include_role:
-            name: redhat_cop.controller_configuration.dispatch
+            name: infra.controller_configuration.dispatch
             apply:
               tags:
                 - organizations
