back to redhat_cop namespace

--- a/roles/filetree_create/templates/casc_ctrl_drop_diff.yml.j2
+++ b/roles/filetree_create/templates/casc_ctrl_drop_diff.yml.j2
@@ -33,8 +33,8 @@
       tags:
         - always
   roles:
-    - role: infra.controller_configuration.filetree_read
-    - role: infra.controller_configuration.object_diff
+    - role: redhat_cop.controller_configuration.filetree_read
+    - role: redhat_cop.controller_configuration.object_diff
       vars:
         controller_configuration_object_diff_tasks:
           - {name: workflow_job_templates, var: controller_workflows, tags: workflow_job_templates}
@@ -49,7 +49,7 @@
           - {name: credentials, var: controller_credentials, tags: credentials}
           # - {name: credential_types, var: controller_credential_types, tags: credential_types}
           - {name: organizations, var: controller_organizations, tags: organizations}
-    - role: infra.controller_configuration.dispatch
+    - role: redhat_cop.controller_configuration.dispatch
       vars:
         controller_configuration_dispatcher_roles:
           - {role: workflow_job_templates, var: controller_workflows, tags: workflow_job_templates}
