--- a/roles/filetree_create/templates/requirements.yml.j2
+++ b/roles/filetree_create/templates/requirements.yml.j2
@@ -1,5 +1,5 @@
 ---
 collections:
-  - name: infra.controller_configuration
+  - name: redhat_cop.controller_configuration
   - name: ansible.controller
 ...
