--- a/roles/filetree_create/templates/README.md.j2
+++ b/roles/filetree_create/templates/README.md.j2
@@ -58,8 +58,7 @@ Before using CasC as a GitOps approach, it is needed to launch an initialization
 5. Setting vault credential file
 
    ```
-   echo "my_vault_pass" > ~/.vault_password
-   ln ~/.vault_password .
+   echo "my_vault_pass" > ./.vault_password
    ```
 
 6. Launch ansible-navigator from CLI to setup day-zero of CasC. Example:
