remove assign_galaxy_credentials_to_org

--- a/roles/filetree_create/templates/casc_ctrl_config.yml.j2
+++ b/roles/filetree_create/templates/casc_ctrl_config.yml.j2
@@ -34,7 +34,7 @@
         - always
   roles:
     - {role: infra.controller_configuration.filetree_read}
-    - {role: infra.controller_configuration.dispatch: false}
+    - {role: infra.controller_configuration.dispatch}
 
   post_tasks:
     - block:
