--- a/roles/filetree_create/templates/controller_projects.j2
+++ b/roles/filetree_create/templates/controller_projects.j2
@@ -1,20 +1,20 @@
 ---
-controller_projects:
+controller_projects: []
 {%- raw %}
-  - name: "{{ orgs }} CasC_Data"
-    description: "Project to include the vars values of the {{ orgs }} Org"
-    organization: "{{ orgs }}"
-    scm_type: git
+#   - name: "{{ orgs }} Demo Project"
+#     description: "Demo Project"
+#     organization: "{{ orgs }}"
+#     scm_type: git
 {% endraw %}
-    scm_url: "{{ gitlab_project_creation.project.ssh_url_to_repo }}"
+#     scm_url: "{{ gitlab_project_creation.project.ssh_url_to_repo }}"
 {%- raw %}
-    scm_credential: "{{ orgs }} {{ env }} Gitlab Credential"
-    scm_branch: "{{ casc_gitlab_scm_branch | default(env) }}"
-    scm_credential: "{{ orgs }} {{ env }} Gitlab Credential"
-    scm_clean: false
-    scm_delete_on_update: false
-    scm_update_on_launch: false
-    scm_update_cache_timeout: 86400
-    allow_override: true
+#     scm_credential: "{{ orgs }} {{ env }} Gitlab Credential"
+#     scm_branch: "{{ casc_gitlab_scm_branch | default(env) }}"
+#     scm_credential: "{{ orgs }} {{ env }} Gitlab Credential"
+#     scm_clean: false
+#     scm_delete_on_update: false
+#     scm_update_on_launch: false
+#     scm_update_cache_timeout: 86400
+#     allow_override: true
 {% endraw %}
 ...
