add missing credential

--- a/roles/filetree_create/templates/controller_credentials.j2
+++ b/roles/filetree_create/templates/controller_credentials.j2
@@ -48,6 +48,15 @@ controller_credentials:
     inputs:
       vault_password: "ToDo"
 
+  - name: "NewOrg dev GitLab API Token"
+    description: "NewOrg dev GitLab API Token"
+    credential_type: "GitLab API Token"
+    organization: "NewOrg"
+    inputs:
+      gitlab_token: "ToDo"
+      gitlab_email: "ToDo"
+      gitlab_user: "ToDo"
+
   - name: "{{ orgs }} {{ env }} Gitlab Credential"
     description: "{{ orgs }} {{ env }} Gitlab Credential"
     credential_type: "Source Control"
