fix hard-coded org name and env

--- a/roles/filetree_create/templates/controller_credentials.j2
+++ b/roles/filetree_create/templates/controller_credentials.j2
@@ -48,10 +48,10 @@ controller_credentials:
     inputs:
       vault_password: "ToDo"
 
-  - name: "NewOrg dev GitLab API Token"
-    description: "NewOrg dev GitLab API Token"
+  - name: "{{ orgs }} {{ env }} GitLab API Token"
+    description: "{{ orgs }} {{ env }} GitLab API Token"
     credential_type: "GitLab API Token"
-    organization: "NewOrg"
+    organization: "{{ orgs }}"
     inputs:
       gitlab_token: "ToDo"
       gitlab_email: "ToDo"
