fix credential's case

--- a/roles/filetree_create/templates/README.md.j2
+++ b/roles/filetree_create/templates/README.md.j2
@@ -116,7 +116,7 @@ Before using CasC as a GitOps approach, it is needed to launch an initialization
 
     1. Go to Dev Controller and open {{ gitlab_project }} CasC_AAP_Workflow
     2. Copy the content of "Webhook URL" and "Webhook Key"
-    3. Go to Gitlab -> Settings -> Webhooks
+    3. Go to GitLab -> Settings -> Webhooks
     4. Paste the content of "Webhook URL" and "Webhook Key" in the gaps "URL" and "Secret Content"
     5. Select Push events and fill the gap with dev
 
@@ -126,7 +126,7 @@ Before using CasC as a GitOps approach, it is needed to launch an initialization
 
     1. Go to PRO Controller and open {{ gitlab_project }} CasC_AAP_Workflow
     2. Copy the content of "Webhook URL" and "Webhook Key"
-    3. Go to Gitlab -> Settings -> Webhooks
+    3. Go to GitLab -> Settings -> Webhooks
     4. Paste the content of "Webhook URL" and "Webhook Key" in the gaps "URL" and "Secret Content"
     5. Select Tag events and fill the gap with dev
 
