--- a/roles/filetree_create/templates/controller_credentials.j2
+++ b/roles/filetree_create/templates/controller_credentials.j2
@@ -57,8 +57,8 @@ controller_credentials:
       gitlab_email: "ToDo"
       gitlab_user: "ToDo"
 
-  - name: "{{ orgs }} {{ env }} Gitlab Credential"
-    description: "{{ orgs }} {{ env }} Gitlab Credential"
+  - name: "{{ orgs }} {{ env }} GitLab Credential"
+    description: "{{ orgs }} {{ env }} GitLab Credential"
     credential_type: "Source Control"
     organization: "{{ orgs }}"
     inputs:
