--- a/roles/filetree_create/templates/controller_projects.j2
+++ b/roles/filetree_create/templates/controller_projects.j2
@@ -8,9 +8,9 @@ controller_projects: []
 {% endraw %}
 #     scm_url: "{{ gitlab_project_creation.project.ssh_url_to_repo }}"
 {%- raw %}
-#     scm_credential: "{{ orgs }} {{ env }} Gitlab Credential"
+#     scm_credential: "{{ orgs }} {{ env }} GitLab Credential"
 #     scm_branch: "{{ casc_gitlab_scm_branch | default(env) }}"
-#     scm_credential: "{{ orgs }} {{ env }} Gitlab Credential"
+#     scm_credential: "{{ orgs }} {{ env }} GitLab Credential"
 #     scm_clean: false
 #     scm_delete_on_update: false
 #     scm_update_on_launch: false
